[package]
name = "bindrs"
version = "0.0.3"
authors = ["Dave Allie <dave@daveallie.com>"]

[profile.release]
lto = true

[dependencies]
slog-term = "~1.3"
slog-bunyan = "~1.1"
slog-stream = "~1.2"
regex = "~0.2"
notify = "~3.0"
rustc-serialize = "~0.3"
bincode = "~0.6"
byteorder = "~1.0"
filetime = "~0.1"
time = "~0.1"
clippy = {version = "*", optional = true}

[dependencies.clap]
version = "~2.20"
features = ["yaml"]

[dependencies.slog]
version = "~1.4"
default-features = false
features = ["release_max_level_debug", "max_level_trace"]

[features]
default = []
