[package]
name = "bindrs"
version = "0.1.2"
authors = ["Dave Allie <dave@daveallie.com>"]

[profile.release]
lto = true

[dependencies]
slog-async = "~2.0"
slog-term = "~2.0"
slog-bunyan = "~2.0"
regex = "~0.2"
notify = "~4.0"
serde = "1.0"
serde_derive = "~1.0"
bincode = "~0.8"
byteorder = "~1.0"
filetime = "~0.1"
time = "~0.1"
tempdir = "~0.3"
semver = "~0.7"
clippy = {version = "*", optional = true}

[dependencies.clap]
version = "~2.24"
features = ["yaml"]

[dependencies.slog]
version = "~2.0"
default-features = false
features = ["release_max_level_debug", "max_level_trace"]

[features]
default = []
