[package]
name = "bindrs"
version = "0.1.2"
authors = ["Dave Allie <dave@daveallie.com>"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false

[dependencies]
slog-async = "~2.0"
slog-term = "~2.0"
slog-bunyan = "~2.0"
regex = "~1.0"
notify = "~4.0"
serde = "1.0"
serde_derive = "~1.0"
bincode = "~1.0"
byteorder = "~1.2"
filetime = "~0.2"
time = "~0.1"
tempdir = "~0.3"
semver = "~0.9"
clippy = {version = "*", git = "https://github.com/rust-lang-nursery/rust-clippy", optional = true}

[dependencies.clap]
version = "~2.31"
features = ["yaml"]

[dependencies.slog]
version = "~2.0"
default-features = false
features = ["release_max_level_debug", "max_level_trace"]

[features]
default = []
